front-end/src/components/Footer.module.css
@keyframes fade-in-bottom {
  0% {
    transform: translateY(50px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
.contactTitle {
  align-self: stretch;
  position: relative;
}
.titleFrame {
  width: 314px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}
.telephone {
  top: 1px;
  left: 0;
  width: 50px;
  height: 50px;
  background-image: url(/public/telephone@3x.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
}
.email,
.phoneText,
.telephone {
  text-decoration: none;
  position: absolute;
}
.phoneText {
  top: 9px;
  left: 59px;
  color: inherit;
  display: inline-block;
  width: 212px;
  height: 31px;
}
.email {
  top: 1px;
  left: 426px;
  width: 50px;
  height: 50px;
  background-image: url(/public/email@3x.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
}
.emailText {
  top: 9px;
  left: 485px;
  color: inherit;
  display: inline-block;
  width: 303px;
  height: 33px;
}
.emailText,
.linkedin,
.linkedinText {
  text-decoration: none;
  position: absolute;
}
.linkedinText {
  top: 9px;
  left: 1002px;
  font-weight: 700;
  color: inherit;
  display: inline-block;
  width: 166px;
  height: 31px;
}
.linkedin {
  top: 0;
  left: 941px;
  width: 50px;
  height: 50px;
  background-image: url(/public/linkedin@3x.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
}
.innerFrame {
  align-self: stretch;
  position: relative;
  height: 51px;
  overflow: hidden;
  flex-shrink: 0;
}
.footer,
.outerFrame {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.outerFrame {
  align-self: stretch;
  align-items: flex-start;
  font-size: var(--p-body-text-size);
  font-family: var(--p-body-text);
}
.footer {
  position: absolute;
  top: 95%;
  left: 12.5%;
  transform: translate(-50%, -50%);
  width: 1440px;
  align-items: center;
  padding: 0 var(--padding-93xl);
  box-sizing: border-box;
  gap: var(--gap-xl);
  opacity: 0;
  text-align: left;
  font-size: var(--h1-main-heading-size);
  color: var(--color-white);
  font-family: var(--h1-main-heading);
}
.footer.animate {
  animation: 1s ease 0s 1 normal forwards fade-in-bottom;
}

